# pasqal-cloud

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  VERSION.txt  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  setup.cfg  setup.py  test.py  test_keycloak.py  testit.py
.github/: pull_request_template.md
.github/scripts/: package.sh
.github/workflows/: check-secrets-leak.yml  preview.yml  publish-doc-to-gh-pages.yml  publish-to-test-pypi.yml  publish-to-testpypi-and-pypi.yml  run-tests-and-mypy-and-black.yml  run-tests-and-mypy-and-pre-commit-hooks.yml  run-tests-and-mypy.yml  test.yml  test_release_notes.yml  verify-if-secrets-were-leaked.yml
advanced-usage/authentication/: index.html
advanced-usage/target-different-regions-and-environments/: index.html
api/batch/: index.html
api/errors/: index.html
api/job/: index.html
api/sdk/: index.html
api/workload/: index.html
cloud-sdk/: README.md  setup.py
docs/: getting-started.md  index.md  migrating-from-pulser-pasqal.md
docs/advanced-usage/: authentication.md  target-different-environments.md  target-different-regions-and-environments.md  use-cloud-client.md
examples/: generate_and_serialise_pulser_sequence.py  send_batch_with_jobs.py  using_emulators.py  using_open_batch.py  using_qpu.py
getting-started/: index.html
pasqal-cloud/: MANIFEST.in  README.md  pyproject.toml  setup.py
pasqal_cloud/: __init__.py  _version.py  authentication.py  batch.py  client.py  endpoints.py  errors.py  job.py  workload.py
pulser-pasqal/: README.md  pyproject.toml  requirements.txt  setup.py
sdk/: README.md  __init__.py  _version.py  authentication.py  batch.py  client.py  endpoints.py  errors.py  job.py  setup.py
tests/: conftest.py  test_auth.py  test_batch.py  test_client.py  test_cloud_sdk_import.py  test_config.py  test_deprecation.py  test_device_specs.py  test_errors.py  test_http_client.py  test_job.py  test_keycloak_token_provider.py  test_project_renaming_compatibility.py  test_projects.py  test_pulser_pasqal.py  test_remote_connections.py  test_workload.py  utils.py
(+224 files in other folders)
