[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE


[flake8]
# Using black's max line length
max-line-length = 88
exclude = tests

application-import-names=sdk
application-package-names=sdk
import-order-style=smarkets
